Started work on the menu class to connect the code together. Made cleaner code for my wikiWebsiteConnection class.