@@ -7,8 +7,12 @@ import java.io.IOException;
 import java.io.InputStream;
 
 public class wikiRevisionParser {
-    public String parse(InputStream testDataStream) throws IOException {
-        JSONArray result = (JSONArray) JsonPath.read(testDataStream, "$..timestamp");
-        return result.get(0).toString();
+    public String parseTimeStamp(InputStream testDataStream) throws IOException {
+        JSONArray wikiTimeStamp = (JSONArray) JsonPath.read(testDataStream, "$..timestamp");
+        return wikiTimeStamp.getFirst().toString();
+    }
+    public String parseWikiUser(InputStream testDataStream) throws IOException {
+        JSONArray wikiUserName = (JSONArray) JsonPath.read(testDataStream, "$.. user");
+        return wikiUserName.getFirst().toString();
     }
 }
